xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__tool_summary_normal_mode_detailed_output.snap
---
source: tui-chatwidget/src/chatwidget/tests/tool_summary.rs
expression: rendered
---
• Ran printf detailed
  └ detailed output
