xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__tool_summary_optimized_live.snap
---
source: tui-chatwidget/src/chatwidget/tests/tool_summary.rs
expression: summary
---
• Ran printf hidden

  Calls: 1 · 0 succeeded · 0 failed · 1 in progress
