xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__tool_summary_optimized_mixed_results.snap
---
source: tui-chatwidget/src/chatwidget/tests/tool_summary.rs
expression: rendered
---
• Tool: bash -lc 'printf failure'
  Calls: 2 · 1 succeeded · 1 failed · 0 in progress
