xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__tool_summary_user_shell_detailed.snap
---
source: tui-chatwidget/src/chatwidget/tests/tool_summary.rs
expression: rendered
---
• You ran printf user-shell
  └ user shell output
